<resources>
    <string name="app_name">Bicycle Guardian</string>
    <string name="security_control">Security Control</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="arm">Arm</string>
    <string name="disarm">Disarm</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="bike_profile">Bike Profile</string>
    <string name="select_photo">Select Photo</string>
    <string name="owner_information">Owner Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="bike_details">Bike Details</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="bike_frame_number">Bike Frame Number</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="electric_bicycle">Electric Bicycle</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="is_the_bike_insured">Is the bike insured?</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="policy_start_date">Policy Start Date</string>
    <string name="policy_end_date">Policy End Date</string>
    <string name="police_registration">Police Registration</string>
    <string name="registered_with_police">Registered with police?</string>
    <string name="registration_id">Registration ID</string>
    <string name="date_registered">Date Registered</string>
    <string name="reported_stolen">Reported Stolen?</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_saved_successfully">Profile Saved Successfully</string>
    <string name="storage_permission_required">Storage permission is required to select a photo</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="camera_permission_denied">Camera permission denied</string>
</resources>
